--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,8 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -119,6 +121,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "video-chat-app"
+    }
+  },
+  "defaultProject": "video-chat-app",
+  "cli": {
+    "analytics": false
+  }
 }
